--- a/Kubernetes/MicroK8s/Jenkins/jenkins_deployment.yaml
+++ b/Kubernetes/MicroK8s/Jenkins/jenkins_deployment.yaml
@@ -36,4 +36,4 @@ spec:
       volumes:
       - name: jenkins-home
         persistentVolumeClaim:
-          claimName: jenkins-pv
+          claimName: jenkins-home
