--- a/Kubernetes/MicroK8s/Jenkins/jenkins_pvc.yaml
+++ b/Kubernetes/MicroK8s/Jenkins/jenkins_pvc.yaml
@@ -1,7 +1,20 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: jenkins-home
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: "/var/jenkins_home"
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jenkins-pv
+  name: jenkins-home
   namespace: default
 spec:
   accessModes:
@@ -9,3 +22,4 @@ spec:
   resources:
     requests:
       storage: 10Gi
+  volumeName: jenkins-home
